tests/ci/expected/0213-label-statement-outside-switch.error.c.expected
ci/0213-label-statement-outside-switch.error.c:1:13: error: constraint violation: label statement outside switch
int main() {
            ^
ยง6.8.1#2: 
2   A case or default label shall appear only in a switch statement. Further
    constraints on such labels are discussed under the switch statement.
